# sinfonia-tier3

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py  tbump.toml
.github/workflows/: python.yml
.reuse/: dep5
src/sinfonia_tier3/: __init__.py  __main__.py  cli.py  cloudlet_deployment.py  curve25519.py  key_cache.py  local_deployment.py  netns_helper.py  root_helper.py  rootless.py  wireguard.py
src/sinfonia_tier3/openapi/: __init__.py
tests/: conftest.py  test_app.py  test_curve25519.py  test_key_cache.py  test_openapi.py  test_wgconfig.py  test_wireguard_config.py  test_wireguard_key.py
