# SPDX-FileCopyrightText: 2021-2022 Carnegie Mellon University
# SPDX-License-Identifier: 0BSD

[tool.poetry]
name = "sinfonia-tier3"
version = "0.3.0"
description = "Tier 3 component of the Sinfonia system"
authors = [
    "Carnegie Mellon University <satya+group@cs.cmu.edu>",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
]
license = "MIT"
packages = [
    { include = "sinfonia_tier3", from = "src" },
    { include = "tests", format="sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22.1.0"
importlib-resources = "^5.0"
openapi-core = "^0.14.2"
pyyaml = "^6.0"
randomname = "^0.1.5"
requests = "^2.28.1"
wgconfig = "^0.2.2"
xdg = "^5.1.1"
yarl = "^1.7.2"
zeroconf = "^0.39.4"

[tool.poetry.scripts]
sinfonia-tier3 = "sinfonia_tier3.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
tbump = "^6.9.0"
invoke = "^1.7.3"

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"

[tool.mypy]
check_untyped_defs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Subclassing validator classes:DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
